# bevy-play

./: .cursorrules  .gitignore  Cargo.toml  build.sh  docker-compose.yml  nginx.conf
.agents/: rule.md
src/: aim_trainer.rs  bunnymark.rs  life_game.rs  main.rs  minesweeper.rs  snake.rs  terrain.rs  voxel.rs
web/: index.html
