[package]
name = "bevy-play"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.19.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Location", "Document", "Element", "HtmlInputElement"] }
js-sys = "0.3"


# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Configure the release profile for minimum WASM size and maximum performance.
[profile.release]
opt-level = "z" # Optimize for size
lto = true      # Link-Time Optimization
codegen-units = 1 # Single codegen unit for better optimizations
panic = "abort" # Remove panic unwinding to save size
strip = true    # Strip symbols/debug info

